# memfd-rs

./: .travis.yml  Cargo.toml  README.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: memfd.yml
examples/: sized.rs
src/: errors.rs  lib.rs  memfd.rs  nr.rs  sealing.rs
tests/: memfd.rs  sealing.rs
