[package]
name = "memfd"
version = "0.3.1-alpha.0"
edition = "2018"
authors = [ "Luca Bruno <lucab@debian.org>", "Simonas Kazlauskas <git@kazlauskas.me>" ]
license = "MIT/Apache-2.0"
repository = "https://github.com/lucab/memfd-rs"
documentation = "https://docs.rs/memfd"
description = "A pure-Rust library to work with Linux memfd and sealing"
keywords = ["Linux", "memfd", "memfd_create", "seal"]
exclude = [
".gitignore",
".travis.yml",
]

[dependencies]
# Private dependencies.
libc = "0.2"
# Public dependencies, exposed through library API.
either = "1.5"
thiserror = "1"

[package.metadata.release]
sign-commit = true
disable-publish = true
disable-push = true
pre-release-commit-message = "cargo: memfd release {{version}}"
post-release-commit-message = "cargo: development version bump"
tag-message = "memfd {{version}}"
